--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#panel2">Résumé</a>
             </li>
             <li>
-                <a href="#panel3">S'inscrire</a>
+                <a href="form.html">S'inscrire</a>
             </li>
             </li>
         </ul>
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <div class="banner sticky">
+    <div class="banner">
         <img src="./assets/desktop/Burger_King_Loyalty_Program.jpg" alt="">
     </div>
 
